# querycad

./: .gitignore  README.md  index.html  pixi.toml  pyproject.toml
benchmark/: .gitignore  README.md  pixi.toml
benchmark/resources/: README.md
benchmark/scripts/: 01-run-benchmakr.py  02-evaluate-approach.ipynb  03-compare-eval.ipynb
docs/lang-segment-anything/: api.py  pixi.toml  rino_seg.py
prompts/: prompt-query-matching-part.xml
resources/cad-models/: .gitignore
resources/model-checkpoints/gnn/: .gitattributes  MF_CAD++_residual_lvl_7_edge_MFCAD++_units_512_date_2021-07-27_epochs_100.ckpt.data-00000-of-00001  MF_CAD++_residual_lvl_7_edge_MFCAD++_units_512_date_2021-07-27_epochs_100.ckpt.index  MF_CAD++_residual_lvl_7_edge_MFCAD++_units_512_date_2021-07-27_epochs_100.ckpt.sample.pt  README.md
scripts/benchmark/: 01-gen-abc-ds.ipynb  02-infer-ds.py  03-eval-results.ipynb  run-dataset.sh
src/cad_service/: cad_expert_llm_interface.py  cad_expert_python_interpreter.py  cad_machining_visualization_pyvista.py
src/cad_service/img_seg/: image_cad_ray_casting.py  image_cad_ray_casting_base.py  image_cad_segmentation.py  image_cad_segmentation_esemble.py  image_processing_client.py  image_processing_response.py  image_segmentation_class.py  masked_part.py  view_orientation_extended.py
src/cad_service/kernel/: cad_loader.py  cad_scc.py
src/cad_service/models/cad_graph/: cad_graph.py  face_graph.py  facet_graph.py
src/cad_service/utils/: cad_face_utils.py  cad_part_utils.py  hierarchical_cadnet_utils.py  pyvista_utils.py
(+1 files in other folders)
